# pingpong

./: .gitignore  README.md  pyproject.toml  stat.pl
src/pingpong/: __init__.py  __main__.py
