[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "pingpong"
description = "Delta Chat bot to send ping-pong messages back and forth and measure latency"
dependencies = [
    "deltachat-rpc-client@git+https://github.com/deltachat/deltachat-core-rust.git@stable#subdirectory=deltachat-rpc-client",
    "click"
]
version = "0.1"
