[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "pingpong"
description = "Delta Chat bot to send ping-pong messages back and forth and measure latency"
dependencies = [
    "deltachat-rpc-client",
    "deltachat-rpc-server",
    "click"
]
version = "0.1"
